Add support for empty Lists and empty Maps
Signed-off-by: Pablo Casares Crespo <pabloc@spotify.com>
Signed-off-by: Nelson Arapé <nelson@spotify.com>
Co-authored-by: Pablo Casares Crespo <pabloc@spotify.com>
Co-authored-by: Nelson Arapé <nelson@spotify.com>